<resources>
    <string name="app_name">FinalProject</string>
    <string name="travels">Travels</string>
    <string name="add_travel">Add Travel</string>
    <string name="my_travels">My Travels</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="account">Account</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Login</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="register">Register</string>
    <string name="flight_time_in_hours">Flight time in hours</string>
    <string name="airport_destination">Airport destination</string>
    <string name="airport_start_point">Airport start point</string>
    <string name="enter_stop_point">Enter stop point</string>
    <string name="add_stop_point">Add Stop point</string>
    <string name="stop_points">Stop Points:</string>
    <string name="add_ticket_document">Add Ticket document</string>
    <string name="enter_rental_company">Enter rental company</string>
    <string name="enter_car_rental_price">Enter car rental price</string>
    <string name="location">Location</string>
    <string name="enter_pick_up_location">Enter pick up location</string>
    <string name="add_car_rental_document">Add Car Rental Document</string>
    <string name="enter_return_location">Enter return location</string>
    <string name="enter_car_model">Enter car model</string>
    <string name="insurance">Insurance</string>
    <string name="residing">Residing</string>
    <string name="flight_tickets">Flight Tickets</string>
    <string name="car_rental">Car Rental</string>
    <string name="enter_insurance_company">Enter insurance company</string>
    <string name="add_insurance_document">Add Insurance Document</string>
    <string name="enter_residing_location">Enter residing location</string>
    <string name="check_in">Check in</string>
    <string name="set_check_in_date">Set Check in date</string>
    <string name="set_check_out_date">Set Check out date</string>
    <string name="enter_residing_place_price">Enter residing place price</string>
    <string name="check_out">Check out</string>
    <string name="show_residing_document">Show Residing Document</string>
    <string name="profile">Profile</string>
</resources>