<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="32dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/residing"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textColor="@color/peach"
                android:textStyle="bold"/>


                <TextView
                    android:id="@+id/residing_showLocation"
                    android:layout_width="match_parent"
                    android:textStyle="bold"
                    android:textSize="22dp"
                    android:padding="10dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:text="Residing Location">

                </TextView>


                <TextView
                    android:id="@+id/residing_priceTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="22dp"
                    android:padding="10dp"
                    android:backgroundTint="@android:color/transparent"
                    android:text="Residing place price"/>



            <RadioGroup
                android:id="@+id/residing_prepaidRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:orientation="horizontal">

                <RadioButton
                    android:enabled="false"
                    android:textSize="20dp"
                    android:id="@+id/residing_showPrepaid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Prepaid" />

                <RadioButton
                    android:enabled="false"
                    android:textSize="20dp"
                    android:id="@+id/residing_showUnpaid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Unpaid" />


            </RadioGroup>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textColor="@color/peach"
                android:textStyle="bold"
                android:text="Dates"
                android:textAlignment="center"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/residing_showCheckIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="8dp"
                    android:text="@string/check_in" />

                <TextView
                    android:id="@+id/residing_showCheckOut"
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:textSize="22dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="8dp"
                    android:text="@string/check_out" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/baseline_attach_file_24" />

                <Button
                    android:id="@+id/residing_showResidingDocument"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:text="@string/show_residing_document" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>